--- a/.sqa/config.yml
+++ b/.sqa/config.yml
@@ -15,52 +15,52 @@ sqa_criteria:
     repos:
       bitbucket.org/cessda/cessda.cdc.searchkit/src/master git:
         commands:
-        - /usr/bin/env sh .sqa/script.thirsty-thistle-gecko.sh
-        container: qc.acc_flaky-persimmon-blue
+        - /usr/bin/env sh .sqa/script.geeky-gold-chin.sh
+        container: qc.acc_dorky-firebrick-fossa
   QC.Doc:
     repos:
       bitbucket.org/cessda/cessda.cdc.searchkit/src/master find_doc_files.py:
         commands:
-        - /usr/bin/env sh .sqa/script.goopy-ochre-jackal.sh
-        container: qc.doc_woozy-denim-avocet
+        - /usr/bin/env sh .sqa/script.craggy-amethyst-frise.sh
+        container: qc.doc_clammy-cyan-wolf
       bitbucket.org/cessda/cessda.cdc.searchkit/src/master git:
         commands:
-        - /usr/bin/env sh .sqa/script.lovely-teal-kangaroo.sh
-        container: qc.doc_frumpy-green-squirt
+        - /usr/bin/env sh .sqa/script.zippy-mauve-horse.sh
+        container: qc.doc_crappy-olivine-butterfly
       bitbucket.org/cessda/cessda.cdc.searchkit/src/master markdownlint:
         commands:
-        - /usr/bin/env sh .sqa/script.sleepy-white-buzzard.sh
-        container: qc.doc_cheeky-cinnamon-wolfhound
+        - /usr/bin/env sh .sqa/script.skinny-denim-oyster.sh
+        container: qc.doc_muzzy-plum-falcon
   QC.Lic:
     repos:
       bitbucket.org/cessda/cessda.cdc.searchkit/src/master licensee:
         commands:
-        - /usr/bin/env sh .sqa/script.sunny-platinum-dachsbracke.sh
-        container: qc.lic_stinky-carmine-gibbon
+        - /usr/bin/env sh .sqa/script.chummy-orange-quetzal.sh
+        container: qc.lic_wheezy-asparagus-caracal
   QC.Met:
     repos:
       bitbucket.org/cessda/cessda.cdc.searchkit/src/master cff-converter-python:
         commands:
-        - /usr/bin/env sh .sqa/script.hasty-linen-barnacle.sh
-        container: qc.met_squeaky-ivory-flounder
+        - /usr/bin/env sh .sqa/script.scanty-chestnut-peccary.sh
+        container: qc.met_homey-lilac-barracuda
   QC.Sty:
     repos:
       bitbucket.org/cessda/cessda.cdc.searchkit/src/master hadolint:
         commands:
-        - /usr/bin/env sh .sqa/script.slaphappy-razzmatazz-seahorse.sh
-        container: qc.sty_sleazy-lavender-havanese
+        - /usr/bin/env sh .sqa/script.seedy-brown-squirt.sh
+        container: qc.sty_queasy-periwinkle-falcon
       bitbucket.org/cessda/cessda.cdc.searchkit/src/master jsonlint:
         commands:
-        - /usr/bin/env sh .sqa/script.flimsy-auburn-manatee.sh
-        container: qc.sty_skanky-dandelion-penguin
+        - /usr/bin/env sh .sqa/script.frumpy-gamboge-urchin.sh
+        container: qc.sty_paltry-dandelion-macaque
       bitbucket.org/cessda/cessda.cdc.searchkit/src/master stylelint:
         commands:
-        - /usr/bin/env sh .sqa/script.thirsty-aqua-zebu.sh
-        container: qc.sty_trippy-aquamarine-quetzal
+        - /usr/bin/env sh .sqa/script.hasty-teal-chimpanzee.sh
+        container: qc.sty_woolly-grey-vulture
   QC.Ver:
     repos:
       bitbucket.org/cessda/cessda.cdc.searchkit/src/master get_git_tags.py:
         commands:
-        - /usr/bin/env sh .sqa/script.scanty-razzmatazz-goat.sh
-        container: qc.ver_shaggy-yellow-armadillo
+        - /usr/bin/env sh .sqa/script.wheezy-cerise-woodpecker.sh
+        container: qc.ver_chewy-tomato-hornet
 timeout: 5400
