--- a/.sqa/config.yml
+++ b/.sqa/config.yml
@@ -15,52 +15,52 @@ sqa_criteria:
     repos:
       bitbucket.org/cessda/cessda.cdc.searchkit/src/master git:
         commands:
-        - /usr/bin/env sh .sqa/script.ready-khaki-saola.sh
-        container: qc.acc_gummy-ecru-gorilla
+        - /usr/bin/env sh .sqa/script.snoopy-seashell-tang.sh
+        container: qc.acc_ready-dandelion-whippet
   QC.Doc:
     repos:
       bitbucket.org/cessda/cessda.cdc.searchkit/src/master find_doc_files.py:
         commands:
-        - /usr/bin/env sh .sqa/script.shaky-lavender-tzu.sh
-        container: qc.doc_hasty-olivine-lemur
+        - /usr/bin/env sh .sqa/script.sleazy-lemon-dollar.sh
+        container: qc.doc_cheeky-russet-duck
       bitbucket.org/cessda/cessda.cdc.searchkit/src/master git:
         commands:
-        - /usr/bin/env sh .sqa/script.boozy-heliotrope-shark.sh
-        container: qc.doc_gamy-apricot-dugong
+        - /usr/bin/env sh .sqa/script.queasy-wisteria-bombay.sh
+        container: qc.doc_fuzzy-cream-paradise
       bitbucket.org/cessda/cessda.cdc.searchkit/src/master markdownlint:
         commands:
-        - /usr/bin/env sh .sqa/script.tacky-white-dane.sh
-        container: qc.doc_sloppy-charcoal-javanese
+        - /usr/bin/env sh .sqa/script.shabby-asparagus-dragon.sh
+        container: qc.doc_tasty-yellow-stingray
   QC.Lic:
     repos:
       bitbucket.org/cessda/cessda.cdc.searchkit/src/master licensee:
         commands:
-        - /usr/bin/env sh .sqa/script.crabby-cerise-buffalo.sh
-        container: qc.lic_skanky-fuchsia-beagle
+        - /usr/bin/env sh .sqa/script.hilly-violet-bison.sh
+        container: qc.lic_woozy-eggplant-cheetah
   QC.Met:
     repos:
       bitbucket.org/cessda/cessda.cdc.searchkit/src/master cff-converter-python:
         commands:
-        - /usr/bin/env sh .sqa/script.messy-pink-buffalo.sh
-        container: qc.met_sloppy-goldenrod-harrier
+        - /usr/bin/env sh .sqa/script.stuffy-asparagus-wallaby.sh
+        container: qc.met_cloudy-salmon-warthog
   QC.Sty:
     repos:
       bitbucket.org/cessda/cessda.cdc.searchkit/src/master hadolint:
         commands:
-        - /usr/bin/env sh .sqa/script.wimpy-cobalt-beaver.sh
-        container: qc.sty_skinny-khaki-moth
+        - /usr/bin/env sh .sqa/script.nippy-turquoise-rottweiler.sh
+        container: qc.sty_randy-wisteria-dachsbracke
       bitbucket.org/cessda/cessda.cdc.searchkit/src/master jsonlint:
         commands:
-        - /usr/bin/env sh .sqa/script.clammy-gold-corgi.sh
-        container: qc.sty_goopy-yellow-hippopotamus
+        - /usr/bin/env sh .sqa/script.flabby-gold-discus.sh
+        container: qc.sty_clammy-burgundy-buzzard
       bitbucket.org/cessda/cessda.cdc.searchkit/src/master stylelint:
         commands:
-        - /usr/bin/env sh .sqa/script.wheezy-rust-hornet.sh
-        container: qc.sty_lanky-silver-warthog
+        - /usr/bin/env sh .sqa/script.wiggy-tan-turtle.sh
+        container: qc.sty_gummy-cobalt-gorilla
   QC.Ver:
     repos:
       bitbucket.org/cessda/cessda.cdc.searchkit/src/master get_git_tags.py:
         commands:
-        - /usr/bin/env sh .sqa/script.snappy-peach-greyhound.sh
-        container: qc.ver_messy-olivine-fousek
-timeout: 1800
+        - /usr/bin/env sh .sqa/script.droopy-grey-saola.sh
+        container: qc.ver_silly-harlequin-coati
+timeout: 5400
